--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ plotly = "^5.9.0"
 [tool.poetry.dev-dependencies]
 jupyter = "^1.0.0"
 autopep8 = "^1.6.0"
+black = {version = "^22.6.0", allow-prereleases = true}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
